Basket Repo with Redis connection created

--- a/Talabat.Core/Talabat.Core.csproj
+++ b/Talabat.Core/Talabat.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Services.Core\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
+  </ItemGroup>
+
 </Project>
